wiskatron demos and short description

--- a/src/pages/projects/factor-e.astro
+++ b/src/pages/projects/factor-e.astro
@@ -1,4 +1,4 @@
- ---
+---
 import ProjectPage from "../../components/ProjectPage.astro";
 import Demo from "../../components/Demo.astro";
 
@@ -76,13 +76,29 @@ export const metadata = {
         </div>
     </div>
 
-     <div class="mt-4">
-         <h2 class="text-2xl text-ayu-accent mb-3">Demo</h2>
-         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-             <Demo image="/images/factor-e/world-gen.gif" title="World generation" type="boxed" />
-             <Demo image="/images/factor-e/pixel-art.png" title="Pixel art" type="boxed" />
-             <Demo image="/images/factor-e/place-destroy.gif" title="Place/destroy loop" type="boxed" />
-             <Demo image="/images/factor-e/debug-overlay.gif" title="Dev/debug overlay" type="boxed" />
-         </div>
-     </div>
+    <div class="mt-4">
+        <h2 class="text-2xl text-ayu-accent mb-3">Demo</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <Demo
+                image="/images/factor-e/world-gen.gif"
+                title="World generation"
+                type="boxed"
+            />
+            <Demo
+                image="/images/factor-e/pixel-art.png"
+                title="Pixel art"
+                type="boxed"
+            />
+            <Demo
+                image="/images/factor-e/place-destroy.gif"
+                title="Place/destroy loop"
+                type="boxed"
+            />
+            <Demo
+                image="/images/factor-e/debug-overlay.gif"
+                title="Dev/debug overlay"
+                type="boxed"
+            />
+        </div>
+    </div>
 </ProjectPage>
