--- a/src/pages/projects/wiskatron.astro
+++ b/src/pages/projects/wiskatron.astro
@@ -10,7 +10,7 @@ export const metadata = {
     image: "/wiskatron-icon.svg",
     // url: "https://wiskatron.oliverbryan.com",
     github: "https://github.com/hex248/wiskatron",
-    hidden: true,
+    hidden: false,
 };
 ---
 
