--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,7 +84,7 @@ const projects: ProjectMetadata[] = Object.values(
 </style>
 
 <Layout currentPage={{ title: "home", path: "/" }}>
-    <h2 class="text-2xl font-600">ABOUT</h2>
+    <h2 class="text-2xl font-600 text-ayu-green-500">ABOUT</h2>
     <div class="flex flex-col py-2 gap-2 mb-4">
         <span class="flex flex-wrap gap-2">
             <a
@@ -103,7 +103,7 @@ const projects: ProjectMetadata[] = Object.values(
                 title="Email"
             >
                 <Icon name="mdi:email-outline" class="w-6 h-6" />
-            04oliverbryan@gmail.com
+                04oliverbryan@gmail.com
             </a>
         </span>
         <p>
@@ -114,9 +114,9 @@ const projects: ProjectMetadata[] = Object.values(
         </p>
     </div>
 
-    <h2 class="text-2xl font-600 mb-4">PROJECTS</h2>
+    <h2 class="text-2xl font-600 text-ayu-green-500">PROJECTS</h2>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 py-2">
         {
             projects.map((project) => (
                 <ProjectListItem
