--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,34 +85,51 @@ const projects: ProjectMetadata[] = Object.values(
 
 <Layout currentPage={{ title: "home", path: "/" }}>
     <h2 class="text-2xl font-600 text-ayu-green-500">ABOUT</h2>
-    <div class="flex flex-col py-2 gap-2 mb-4">
-        <span class="flex flex-wrap gap-2">
-            <a
-                href="https://github.com/hex248"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="github-icon-link flex items-center gap-1"
-                title="GitHub Profile"
-            >
-                <Icon name="mdi:github" class="w-6 h-6" />
-                hex248
-            </a>
-            / <a
-                href="mailto:04oliverbryan@gmail.com"
-                class="github-icon-link flex items-center gap-1"
-                title="Email"
-            >
-                <Icon name="mdi:email-outline" class="w-6 h-6" />
-                04oliverbryan@gmail.com
-            </a>
-        </span>
-        <p>
-            AGE: <TimeSince
-                date={new Date("11:47:00 2004-11-04")}
-                client:react
-            />
-        </p>
-    </div>
+    <span class="flex flex-wrap gap-2 py-2">
+        <a
+            href="https://github.com/hex248"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="github-icon-link flex items-center gap-1"
+            title="GitHub Profile"
+        >
+            <Icon name="mdi:github" class="w-6 h-6" />
+            hex248
+        </a>
+        / <a
+            href="mailto:04oliverbryan@gmail.com"
+            class="github-icon-link flex items-center gap-1"
+            title="Email"
+        >
+            <Icon name="mdi:email-outline" class="w-6 h-6" />
+            04oliverbryan@gmail.com
+        </a>
+    </span>
+    <ul class="list-disc ml-4 mb-4">
+        <li>
+            <span class="text-ayu-red-500 font-500">Name: </span>Oliver Bryan
+        </li>
+        <li>
+            <span class="text-ayu-blue-500 font-500">Role: </span>Software
+            Developer (Student)
+        </li>
+        <li>
+            <span class="text-ayu-red-500 font-500">Experience: </span>7 years,
+            1 year in industry as a Junior Software Developer
+        </li>
+        <li>
+            <span class="text-ayu-blue-500 font-500">Skills: </span>React,
+            TypeScript, Pixel-Art
+        </li>
+        <li>
+            <span class="text-ayu-red-500 font-500">Hobbies: </span>Music,
+            Travel, Badminton
+        </li>
+        <li>
+            <span class="text-ayu-blue-500 font-500">Age: </span>
+            <TimeSince date={new Date("11:47:00 2004-11-04")} client:react />
+        </li>
+    </ul>
 
     <h2 class="text-2xl font-600 text-ayu-green-500">PROJECTS</h2>
 
