--- a/src/pages/projects/glimpse.astro
+++ b/src/pages/projects/glimpse.astro
@@ -11,6 +11,7 @@ export const metadata = {
     url: "https://glimpse.ob248.com",
     github: "https://github.com/hex248/glimpse",
     hidden: false,
+    tags: ["web", "react", "typescript"],
 };
 ---
 
