--- a/src/pages/projects/mizu.astro
+++ b/src/pages/projects/mizu.astro
@@ -9,6 +9,7 @@ export const metadata = {
     slug: "mizu",
     image: "/mizu-icon.svg",
     hidden: true,
+    tags: ["nodejs", "typescript", "postgresql", "aws_s3", "discord"],
 };
 ---
 
@@ -22,6 +23,8 @@ export const metadata = {
         <ul class="list-disc list-inside space-y-1">
             <li>Node.js</li>
             <li>TypeScript</li>
+            <li>Express.js</li>
+            <li>Discord.js</li>
             <li>PostgreSQL</li>
             <li>AWS S3</li>
         </ul>
