--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -245,3 +245,11 @@ body {
     padding: 5px;
     text-align: center;
 }
+
+.no-select {
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+}
