--- a/src/components/ProjectListItem.astro
+++ b/src/components/ProjectListItem.astro
@@ -74,7 +74,7 @@ tags.sort();
                 tags && tags.length > 0 && (
                     <div class="flex gap-1.5 text-xs flex-wrap leading-3 items-center mb-1 no-select">
                         {tags.map((tag: string, idx: number) => (
-                            <span class="flex items-center text-ayu-gutter font-500 rounded-md border border-ayu-gutter px-1.5 py-0.5">
+                            <span class="project-tag flex items-center text-ayu-fg font-500 rounded-md border border-ayu-gutter px-1.5 py-0.5">
                                 {tag}
                             </span>
                         ))}
