more tags on projects

--- a/src/pages/projects/glimpse.astro
+++ b/src/pages/projects/glimpse.astro
@@ -11,7 +11,7 @@ export const metadata = {
     url: "https://glimpse.ob248.com",
     github: "https://github.com/hex248/glimpse",
     hidden: false,
-    tags: ["web", "react", "typescript"],
+    tags: ["web", "react", "typescript", "postgresql", "blobs", "database"],
 };
 ---
 
