--- a/src/pages/projects/mizu.astro
+++ b/src/pages/projects/mizu.astro
@@ -9,7 +9,14 @@ export const metadata = {
     slug: "mizu",
     image: "/mizu-icon.svg",
     hidden: true,
-    tags: ["nodejs", "typescript", "postgresql", "aws_s3", "discord"],
+    tags: [
+        "node",
+        "typescript",
+        "postgresql",
+        "aws_s3",
+        "discord_api",
+        "database",
+    ],
 };
 ---
 
