renamed "GitHub" link to "Source Code"

--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -81,7 +81,7 @@ metadata.tags?.sort();
                             rel="noopener noreferrer"
                             class="github"
                         >
-                            GitHub
+                            Source Code
                         </a>
                     </>
                 )
@@ -128,7 +128,7 @@ metadata.tags?.sort();
                             rel="noopener noreferrer"
                             class="github"
                         >
-                            GitHub
+                            Source Code
                         </a>
                     </>
                 )
