--- a/src/pages/projects/factor-e.astro
+++ b/src/pages/projects/factor-e.astro
@@ -11,7 +11,7 @@ export const metadata = {
     image: "/factor-e-icon.svg",
     github: "https://github.com/hex248/factor-e",
     hidden: false,
-    tags: ["game", "c++", "opengl", "cmake", "pixel_art"],
+    tags: ["Game", "C++", "OpenGL", "CMake", "Pixel Art"],
 };
 ---
 
