--- a/src/pages/projects/glimpse.astro
+++ b/src/pages/projects/glimpse.astro
@@ -12,12 +12,12 @@ export const metadata = {
     github: "https://github.com/hex248/glimpse",
     hidden: false,
     tags: [
-        "web",
-        "react",
-        "typescript",
-        "postgresql",
-        "blob_storage",
-        "database",
+        "Web",
+        "React",
+        "TypeScript",
+        "PostgreSQL",
+        "Blob Storage",
+        "Databases",
     ],
 };
 ---
