--- a/src/pages/projects/mizu.astro
+++ b/src/pages/projects/mizu.astro
@@ -10,12 +10,12 @@ export const metadata = {
     image: "/mizu-icon.svg",
     hidden: true,
     tags: [
-        "node",
-        "typescript",
-        "postgresql",
-        "aws_s3",
-        "discord_api",
-        "database",
+        "Node.js",
+        "TypeScript",
+        "PostgreSQL",
+        "AWS S3",
+        "Discord API",
+        "Database",
     ],
 };
 ---
