--- a/src/pages/projects/watercooler.astro
+++ b/src/pages/projects/watercooler.astro
@@ -12,14 +12,14 @@ export const metadata = {
     // github: "https://github.com/hex248/watercooler",
     hidden: true,
     tags: [
-        "web",
-        "react",
-        "typescript",
-        "webrtc",
-        "livekit",
-        "postgresql",
-        "oauth",
-        "database",
+        "Web",
+        "React",
+        "TypeScript",
+        "WebRTC",
+        "LiveKit",
+        "PostgreSQL",
+        "OAuth2",
+        "Databases",
     ],
 };
 ---
