--- a/src/pages/projects/wiskatron.astro
+++ b/src/pages/projects/wiskatron.astro
@@ -11,7 +11,7 @@ export const metadata = {
     // url: "https://wiskatron.oliverbryan.com",
     github: "https://github.com/hex248/wiskatron",
     hidden: false,
-    tags: ["web", "react", "typescript", "spotify_api"],
+    tags: ["Web", "React", "TypeScript", "Spotify API"],
 };
 ---
 
