new cv location

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,7 +127,7 @@ const sortedTags = Array.from(allTags).sort((a, b) => a.localeCompare(b));
             04oliverbryan@gmail.com
         </a>
         / <a
-            href="/cv.pdf"
+            href="/cv/cv.pdf"
             target="_blank"
             rel="noopener noreferrer"
             class="github-icon-link flex items-center gap-1"
