updated mizu date

--- a/src/pages/projects/mizu.astro
+++ b/src/pages/projects/mizu.astro
@@ -5,7 +5,7 @@ export const metadata = {
     title: "MIZU",
     description:
         "A discord bot card trading and collection game. (Currently inactive, 4000+ players) ",
-    date: "January - June 2024",
+    date: "2021 - 2024",
     slug: "mizu",
     image: "/mizu-icon.svg",
     hidden: true,
