added education list item

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,14 +143,17 @@ const sortedTags = Array.from(allTags).sort((a, b) => a.localeCompare(b));
         </li>
         <li>
             <span class="text-ayu-blue-500 font-500">Role: </span>Software
-            Developer (Student)
+            Developer Junior
         </li>
         <li>
-            <span class="text-ayu-red-500 font-500">Experience: </span>7 years,
+            <span class="text-ayu-red-500 font-500">Education: </span>Final Year Software Engineeering (BEng), University of Westminster (2024-2026)
+        </li>
+        <li>
+            <span class="text-ayu-blue-500 font-500">Experience: </span>7 years,
             1 year in industry as a Junior Software Developer
         </li>
         <li>
-            <span class="text-ayu-blue-500 font-500">Skills: </span>Web
+            <span class="text-ayu-red-500 font-500">Skills: </span>Web
             Development, Game Development, Python, JavaScript, TypeScript
         </li>
         <li>
