basic shleep description
pulled from itch.io

--- a/src/pages/projects/shleep.astro
+++ b/src/pages/projects/shleep.astro
@@ -4,7 +4,7 @@ import ProjectPage from "../../components/ProjectPage.astro";
 export const metadata = {
     title: "Shleep",
     description:
-        "",
+        "A couch co-op base defense game where you protect a sleepign child from nightmares.",
     date: "February - June 2023",
     slug: "shleep",
     image: "/shleep-icon.svg",
@@ -14,13 +14,14 @@ export const metadata = {
         "Unity",
         "C#",
         "HLSL",
-        "VFX"
+        "Shader Graph",
+		"Visual Effects Graph"
     ],
 };
 ---
 
 <ProjectPage metadata={metadata}>
-    <p>simple description here</p>
+    <p>Shleep is a couch co-op base defense game where you can build towers to help aid you and your party to protect a sleeping child from nightmares.</p>
 
     <p>images here</p>
 
